tests/security/taintProcOpen/output.txt
ERROR: TaintedData - input.hack:2:17 - Data from a server request found its way to a shell command